# secret-dice-contract-pathway

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  README.md
.cargo/: config
.run/: Build.run.xml  Configure secretcli.run.xml  New Wallet.run.xml
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: int_types.ts  integration.ts  package.json
