[package]
name = "secret-dice-contract-pathway"
version = "0.1.0"
authors = ["laura <laura@secretchaingirl.io>", "Itzik Grossman <itzik@scrtlabs.com>"]
edition = "2021"
publish = false
description = "A simple dice roll game implemented as a Secret Contract for the Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
sha2 = "0.9.1"
rand_chacha = "0.2.2"
rand = "0.7.3"
